--- a/Nargo.toml
+++ b/Nargo.toml
@@ -2,6 +2,6 @@
 name = "chacha20"
 type = "lib"
 authors = ["Sleepingshell"]
-compiler_version = "0.10.5"
+compiler_version = ">=0.10.5"
 
 [dependencies]
